--- a/px-context-browser.html
+++ b/px-context-browser.html
@@ -6,6 +6,8 @@
 <!--suppress HtmlUnknownTarget -->
 <link rel="import" href="../polymer/polymer.html"/>
 <link rel="import" href="../px-spinner/px-spinner.html"/>
+<link rel="import" href="../px-tooltip/px-tooltip.html" />
+<link rel="import" href="px-context-browser-item.html" />
 <style>
   [dir=rtl] .fa.px-context-browser {
     -webkit-transform: scale(-1, 1);
@@ -60,67 +62,69 @@ Define how your data will come in using these methods:
   <link rel="import" type="css" href="css/px-context-browser.css" polyfill-next-selector/>
   <template>
     <div id="modal" on-click="toggleColumnBrowser" class$="{{isItemHidden(showColumnBrowser)}}"></div>
-    <div id="back">
-      <div class="column-browser-container flex flex--col">
-        <header class="flex u-pl" id="selectContext">
-          <div class="content-wrapper">
-            <content></content>
+      <div id="ruler" class="flex flex--col">
+        <div id="back">
+          <div class="column-browser-container flex flex--col">
+            <header class="flex u-pl" id="selectContext">
+              <div class="content-wrapper">
+                <content></content>
+              </div>
+              <div class="flex__item--middle">
+                <h1 class="epsilon caps weight--normal u-m0" on-click="toggleColumnBrowser">
+                  <span>{{openedItemName}}</span>
+                  <i class="fa fa-caret-down"></i>
+                </h1>
+                <ul class="list-inline list-inline--delimited">
+                  <template is="dom-repeat" items="{{openedBreadcrumbs}}">
+                    <li>{{item}}</li>
+                  </template>
+                </ul>
+              </div>
+            </header>
           </div>
-          <div class="flex__item--middle">
-            <h1 class="epsilon caps weight--normal u-m0" on-click="toggleColumnBrowser">
-              <span>{{openedItemName}}</span>
-              <i class="fa fa-caret-down"></i>
-            </h1>
-            <ul class="list-inline list-inline--delimited">
-              <template is="dom-repeat" items="{{openedBreadcrumbs}}">
-                <li>{{item}}</li>
+        </div>
+          <div class$="{{isItemHidden(showColumnBrowser, 'flex flex--col')}}">
+            <ul class="breadcrumbs list-inline list-inline--delimited u-pv-">
+              <template is="dom-repeat" id="breadcrumbs" items="{{parentNodes}}">
+                <li class$="{{isItemHidden(item.hideBreadcrumb, 'u-pv--')}}">
+                  <span class="breadcrumb" on-click="handleBreadcrumbClick">{{item.name}}</span>
+                </li>
               </template>
             </ul>
-          </div>
-        </header>
-        <div id="ruler" class$="{{isItemHidden(showColumnBrowser, 'flex flex--col')}}">
-            <div class$="{{isItemHidden(showColumnBrowser, 'flex flex--col')}}">
-              <ul class="breadcrumbs list-inline list-inline--delimited u-pv-">
-                <template is="dom-repeat" id="breadcrumbs" items="{{parentNodes}}">
-                  <li class$="{{isItemHidden(item.hideBreadcrumb, 'u-pv--')}}">
-                    <span class="breadcrumb" on-click="handleBreadcrumbClick">{{item.name}}</span>
-                  </li>
-                </template>
-              </ul>
-              <div class="flex flex--col column-browser" id="columnBrowser">
-                <px-spinner finished></px-spinner>
-                <div class="flex">
-                  <template is="dom-repeat" id="levels" items="{{parentNodes}}">
-                    <div class="flex flex--col column push" data-column>
-                      <div class="head">{{item.header}}</div>
-                      <div class="flex__item scroll-y" on-scroll="scrollEndHandler">
-                        <ul class$="{{UlSelected(item, selectedItem)}}">
-                          <template is="dom-repeat" id="level" items="{{item.children}}">
-                            <li on-click="itemClickHandler" id$="[[getItemId(item)]]" class$="{{isItemSelected(item, selectedItem)}}" >
-                              <span class="flex__item item-label">{{getItemLabel(item)}}</span>
-                              <button class$="[[getItemOpenerClass(item)]]" on-click="openClickHandler" key$="[[getItemId(item)]]">Open
-                              </button>
-                              <template is="dom-if" if="{{_hasChildren(item)}}">
-                                <span><i class="fa fa-angle-right"></i></span>
-                              </template>
-                            </li>
-                          </template>
-                        </ul>
-                      </div>
+            <div class="flex flex--col column-browser" id="columnBrowser">
+              <px-spinner finished></px-spinner>
+              <div class="flex">
+                <template is="dom-repeat" id="levels" items="{{parentNodes}}">
+                  <div class="flex flex--col column push" data-column>
+                    <div class="head">{{item.header}}</div>
+                    <div class="flex__item scroll-y" on-scroll="scrollEndHandler">
+                      <ul class$="{{UlSelected(item, selectedItem)}}">
+                        <template is="dom-repeat" id="level" items="{{item.children}}">
+                          <li on-click="itemClickHandler" id$="[[getItemId(item)]]" class$="{{isItemSelected(item, selectedItem)}}" >
+                            <div class="flex__item item-label">{{getItemLabel(item)}}
+                                <px-tooltip tooltip-message="{{getItemLabel(item)}}" orientation="top"></px-tooltip>
+                            </div>
+                            <button class$="[[getItemOpenerClass(item)]]" on-click="openClickHandler" key$="[[getItemId(item)]]">Open
+                            </button>
+                            <template is="dom-if" if="{{_hasChildren(item)}}">
+                              <span><i class="fa fa-angle-right"></i></span>
+                            </template>
+                          </li>
+                        </template>
+                      </ul>
                     </div>
-                  </template>
-                </div>
-                <!-- Avoid ruler being part of the structure but being within a container that can enforce its relative size -->
-                <div class="ruler">
-                  <!-- Use this as a ruler/measuring-stick to measure the true minimum width. -->
-                </div>
-                <!-- this overlay is for the spinner -->
-                <div class="overlay"></div>
+                  </div>
+                </template>
               </div>
+              <!-- Avoid ruler being part of the structure but being within a container that can enforce its relative size -->
+              <div class="ruler">
+                <!-- Use this as a ruler/measuring-stick to measure the true minimum width. -->
+              </div>
+              <!-- this overlay is for the spinner -->
+              <div class="overlay"></div>
             </div>
-        </div>
+          </div>
       </div>
-    </div>
   </template>
 </dom-module>
 
@@ -253,6 +257,17 @@ Define how your data will come in using these methods:
           type: Boolean,
           value: false,
           reflectToAttribute: true
+        },
+        /**
+         * Maximum number of characters in a container.
+         * Will be used to calculate whether the item will have a tooltip and ellipsis.
+         * Optional.
+         * @type Number
+         * @default
+         */
+        maxContCharacterWidth: {
+          type: Number,
+          value: 22
         }
       },
       ready: function() {
