--- a/px-context-browser.html
+++ b/px-context-browser.html
@@ -237,7 +237,7 @@ Define how your data will come in using these methods:
 
     onHeaderClick: function(e) {
       this.toggleColumnBrowser();
-      // this.spinner('hide');
+      this.spinner('hide');
     },
 
     conditionalClass: function(condition, className) {
