class name / conditional should be negated for removal, not addition

--- a/px-context-browser.html
+++ b/px-context-browser.html
@@ -64,7 +64,7 @@ Define how your data will come in using these methods:
 <dom-module id="px-context-browser">
   <link rel="import" type="css" href="css/px-context-browser.css" polyfill-next-selector/>
   <template>
-    <px-overlay id="overlay" type="dark" class$="[[removeConditionalClass(showColumnBrowser, 'fadeFromHidden')]]"></px-overlay>
+    <px-overlay id="overlay" type="dark" class$="[[addConditionalClass(showColumnBrowser, 'fadeFromHidden')]]"></px-overlay>
     <div id="back">
       <div class="column-browser-container flex flex--col">
         <px-context-browser-header
@@ -73,8 +73,8 @@ Define how your data will come in using these methods:
           opened-item-name="[[openedItemName]]">
           <content></content>
         </px-context-browser-header>
-        <div id="ruler" class$="{{addConditionalClass(showColumnBrowser, 'visuallyhidden', 'flex flex--col')}}">
-          <div class$="{{addConditionalClass(showColumnBrowser, 'visuallyhidden', 'flex flex--col')}}">
+        <div id="ruler" class$="{{removeConditionalClass(showColumnBrowser, 'visuallyhidden', 'flex flex--col')}}">
+          <div class$="{{removeConditionalClass(showColumnBrowser, 'visuallyhidden', 'flex flex--col')}}">
             <px-context-browser-breadcrumbs></px-context-browser-bread-crumbs>
             <px-context-browser-column-browser
               id="column-browser"
