--- a/px-context-browser-column-browser.html
+++ b/px-context-browser-column-browser.html
@@ -1,18 +1,19 @@
 <link rel="import" href="../polymer/polymer.html"/>
-<link rel="import" href="px-context-browser-menu.html"/>
+<link rel="import" href="px-context-browser-column.html"/>
 
 <dom-module id="px-context-browser-column-browser">
   <link rel="import" type="css" href="css/px-context-browser.css" />
+  <script src="../lodash/lodash.js"></script>
   <template>
     <div class="flex flex--col column-browser">
       <px-spinner id="spinner" finished></px-spinner>
-      <!--
       <div class="flex">
-        <template is="dom-repeat" id="levels" items="{{parentNodes}}">
-          <px-context-browser-menu menu-data="[[item]]"></px-context-browser-menu>
+        <template is="dom-repeat" id="levels" items="{{columns}}">
+          <px-context-browser-column
+            column-data="[[item]]"
+            field-keys="[[fieldKeys]]"></px-context-browser-column>
         </template>
       </div>
-      -->
       <div class="ruler">
       </div>
       <div class="overlay"></div>
@@ -34,6 +35,28 @@
       parentNodes: {
         type: Array,
         value: function() {return [];} //this is Polmer's way of defining an empty array in properties
+      },
+      browserContext: {
+        type: Object,
+        value: function() { return {}; },
+        observer: 'browserContextChanged'
+      },
+      columns: {
+        type: Array,
+        value: function() { return []; }
+      },
+      fieldKeys: {
+        type: Object,
+        value: null
+      }
+
+    },
+
+
+    browserContextChanged: function(newValue, oldValue) {
+      if(!_.isEmpty(newValue)) {
+        var children = newValue[this.fieldKeys['children']] || [];
+        this.columns = [{ children }];
       }
     },
 
