setting up computed properties on context browser column item

--- a/px-context-browser-column-item.html
+++ b/px-context-browser-column-item.html
@@ -25,7 +25,7 @@
        * @type {Object}
        * @default null
        */
-      item: {
+      columnItem: {
         type: Object,
         value: null
       },
@@ -41,28 +41,40 @@
         reflectToAttribute: true
       },
 
+      testValue: 'test',
+
+      fieldKeys: {
+        type: Object,
+        value: function() {
+          return {
+            children: "data",
+            id: "id",
+            label: "name"
+          }
+        }
+      },
+
       itemOpenerClass: {
         type: String,
         value: 'temp-item-opener-class',
-        computed: '_computeItemOpenerClass(item)'
+        computed: '_computeItemOpenerClass(columnItem)'
       },
 
       itemId: {
         type: String,
-        value: null,
-        computed: '_computeItemId(item)'
+        computed: '_computeItemId(columnItem, fieldKeys)'
       },
 
       isItemSelected: {
         type: Boolean,
         value: false,
-        computed: '_computeIsItemSelected(item)'
+        computed: '_computeIsItemSelected(columnItem)'
       },
 
       _hasChildren: {
         type: Boolean,
         value: false,
-        computed: '_computeHasChildren(item)'
+        computed: '_computeHasChildren(columnItem)'
       },
 
       _baseClassNames: {
@@ -70,6 +82,10 @@
         value: 'opener btn btn--small btn--tertiary '
       }
 
+    },
+
+    ready: function() {
+      this._computeItemId(this.columnItem);
     },
 
     _computeItemOpenerClass: function(item) {
@@ -82,11 +98,13 @@
     menu: null,
 
     _computeItemId: function(item) {
-      return item ? item[this.parent.idField] : null;
+      return item ? item[this.fieldKeys['id']] : null;
     },
 
     _computeIsItemSelected: function(item) {
-
+      var base = "flex flex--middle selectable-item";
+      // console.log('item',this.item);
+      return item.inSelectedPath ? base += " selected" : base;
     },
 
     _computeHasChildren: function(item) {
@@ -95,12 +113,6 @@
 
     _openClickHandler: function() {
 
-    },
-
-    ready: function() {
-      this.parent = this.parentNode;
-      console.log('this.parent', this.parent);
-      console.log('showChevron', this.showChevron);
     },
 
     /**
@@ -146,9 +158,7 @@
      * @private
      */
     isItemSelected: function(selectedItem) {
-      var base = "flex flex--middle selectable-item";
 
-      return base = (this.item.inSelectedPath) ? base += " selected" : base;
     },
 
     /**
